# parse-documents

./: README.md  flake.nix  pyproject.toml
src/drive_ocr/: main.py
